--- a/base/plugins/score-plugin-media/CMakeLists.txt
+++ b/base/plugins/score-plugin-media/CMakeLists.txt
@@ -13,15 +13,15 @@ if(NOT FFmpeg_FOUND)
 endif()
 set(SCORE_AUDIO_PLUGINS 1)
 if(SCORE_AUDIO_PLUGINS)
-  find_package(Lilv)
-  find_package(Suil)
+  find_package(Lilv QUIET)
+  find_package(Suil QUIET)
   if(NOT MSVC)
-    find_package(Faust)
+    find_package(Faust QUIET)
   endif()
 endif()
 
 if(UNIX AND NOT APPLE)
-  find_package(ZLIB)
+  find_package(ZLIB QUIET)
 endif()
 # Files & main target
 set(HDRS ${HDRS}
