--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,11 @@ set(CMAKE_MODULE_PATH
   "${CMAKE_CURRENT_SOURCE_DIR}/CMake/modules/cmake-modules"
   "${CMAKE_CURRENT_SOURCE_DIR}/API/CMake/cmake-modules"
   )
-set(CMAKE_PREFIX_PATH
-  "${CMAKE_PREFIX_PATH}"
-  "${CMAKE_MODULE_PATH}")
+
+list(APPEND CMAKE_PREFIX_PATH "${CMAKE_MODULE_PATH}")
+if(APPLE AND EXISTS /usr/local/opt/qt5)
+  list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/qt5")
+endif()
 
 if(NOT SCORE_CONFIGURATION)
   set(SCORE_CONFIGURATION developer)
