--- a/CMake/Deployment/Linux/Score.desktop.in
+++ b/CMake/Deployment/Linux/Score.desktop.in
@@ -1,8 +1,9 @@
 [Desktop Entry]
 Type=Application
-Name=score
+Name=ossia score
 Comment=An interactive sequencer for the intermedia arts
-Exec=score
-Icon=score
+Version=${SCORE_VERSION}
+Exec=ossia-score
+Icon=ossia-score
 Terminal=false
 Categories=AudioVideo;
