--- a/base/plugins/score-plugin-scenario/CMakeLists.txt
+++ b/base/plugins/score-plugin-scenario/CMakeLists.txt
@@ -210,6 +210,7 @@ set(HDRS
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/CommentEdit.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/IntervalInspectorFactory.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/IntervalInspectorWidget.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/SpeedSlider.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/IntervalSummaryWidget.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/Widgets/DurationSectionWidget.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/Widgets/ProcessWidgetArea.hpp"
@@ -534,6 +535,7 @@ set(SRCS ${SRCS}
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/Widgets/DurationSectionWidget.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/Widgets/ProcessWidgetArea.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/IntervalInspectorWidget.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/SpeedSlider.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Interval/IntervalSummaryWidget.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/State/StateInspectorWidget.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Inspector/Event/EventWidgets/EventShortcut.cpp"
