--- a/base/plugins/score-plugin-automation/CMakeLists.txt
+++ b/base/plugins/score-plugin-automation/CMakeLists.txt
@@ -15,24 +15,24 @@ set(HDRS
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/AutomationView.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/AutomationExecution.hpp"
 
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomModel.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomPresenter.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomView.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomMetadata.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientExecution.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Color/GradientModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Color/GradientPresenter.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Color/GradientView.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Color/GradientMetadata.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Color/GradientExecution.hpp"
 
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomModel.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomPresenter.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomView.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomMetadata.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineExecution.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Spline/SplineModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Spline/SplinePresenter.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Spline/SplineView.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Spline/SplineMetadata.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Spline/SplineExecution.hpp"
 
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Metronome/MetronomeColors.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Metronome/MetronomeModel.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Metronome/MetronomePresenter.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Metronome/MetronomeView.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Metronome/MetronomeProcessMetadata.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Metronome/MetronomeExecution.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Metronome/MetronomeColors.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Metronome/MetronomeModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Metronome/MetronomePresenter.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Metronome/MetronomeView.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Metronome/MetronomeProcessMetadata.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Metronome/MetronomeExecution.hpp"
 
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Commands/AutomationCommandFactory.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Commands/ChangeAddress.hpp"
@@ -54,20 +54,20 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/AutomationModel.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/AutomationExecution.cpp"
 
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomModel.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomPresenter.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomView.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientExecution.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Color/GradientModel.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Color/GradientPresenter.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Color/GradientView.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Color/GradientExecution.cpp"
 
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomModel.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomPresenter.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomView.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineExecution.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Spline/SplineModel.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Spline/SplinePresenter.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Spline/SplineView.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Spline/SplineExecution.cpp"
 
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Metronome/MetronomeColors.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Metronome/MetronomeModel.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Metronome/MetronomeView.cpp"
-"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Metronome/MetronomeExecution.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Metronome/MetronomeColors.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Metronome/MetronomeModel.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Metronome/MetronomeView.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Metronome/MetronomeExecution.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Commands/InitAutomation.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Commands/ChangeAddress.cpp"
